stack/sonarr/deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        dfl.mn/datacentre: mission
      containers:
        - name: sonarr
          image: linuxserver/sonarr:preview
          imagePullPolicy: Always
          ports:
          - containerPort: 8989
          volumeMounts:
          - mountPath: /downloads
            name: downloads
          - mountPath: /config
            name: antfarm
          - mountPath: /tv-a1
            name: tv-a1
          - mountPath: /tv-a2
            name: tv-a2
          - mountPath: /tv-a3
            name: tv-a3
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: antfarm
          persistentVolumeClaim:
            claimName: localfs-sonarr
        - name: tv-a1
          persistentVolumeClaim:
            claimName: tv-a1
        - name: tv-a2
          persistentVolumeClaim:
            claimName: tv-a2
        - name: tv-a3
          persistentVolumeClaim:
            claimName: tv-a3
