stack/sonarr/service-sonarr.yaml
kind: Service
apiVersion: v1
metadata:
  name: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
  selector:
      app: sonarr
